--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,19 @@ h1, h2 {
     background-color: #dbdcde;
  }
 
+ #portfolio .card-title {
+    color: #1f7798;
+    font-size: 1.2rem;
+ }
+
+ #portfolio .btn-outline-secondary : hover{
+    background-color: #1f7798;
+ }
+
+ #portfolio .card-text {
+    min-height: 120px;
+ }
+
  /*Contact section*/
  #contact {
     background-color: white;
@@ -40,3 +53,13 @@ h1, h2 {
     min-height: 500px;
     padding: 5% 7%;
  }
+
+/* Media Query*/
+
+/*Use Bootstrap breakpoint for XL screens*/
+@media screen and (min-width: 1200px) {
+    /*Fixes all portfolio cards being too tall on xl screens*/
+    #portfolio .card-text {
+        min-height: auto;
+    }
+  }
